--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="menu_staylogged">Stay logged</string>
     <string name="title_activity_maps">Map</string>
     <string name="user_name">Username</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
