--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="noch_kein_account_hier_registrieren">Noch kein Account? <u> Hier registrieren! </u></string>
     <string name="passwort_vergessen"> <u> Passwort vergessen? </u></string>
     <string name="account_schon_vorhanden_hier_einloggen">Account schon vorhanden? <u>Hier Einloggen!</u></string>
+    <string name="username" />
 </resources>
